--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:padding="24dp"
         tools:text="@string/question_australia"
         android:textSize="20sp"
-        android:gravity="center" />
+        android:gravity="center"
+        android:layout_gravity="center_horizontal" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -37,7 +38,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_gravity="center_vertical|center_horizontal">>
 
         <ImageButton
             android:id="@+id/prev_button"
@@ -50,6 +51,7 @@
             android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
             android:src="@drawable/arrow_right"
             android:contentDescription="@string/next_button" />
 
