--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -45,7 +45,6 @@
                 android:layout_marginStart="16dp" />
         </LinearLayout>
 
-        <!-- Горизонтальный LinearLayout для кнопок Prev/Next, внизу -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -53,7 +52,13 @@
             android:layout_marginTop="16dp"
             android:orientation="horizontal">
 
-            <!-- Кнопка Prev -->
+            <Button
+                android:id="@+id/cheat_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center_horizontal"
+                android:text="@string/cheat_button" />
+
             <ImageButton
                 android:id="@+id/prev_button"
                 android:layout_width="wrap_content"
@@ -62,7 +67,6 @@
                 android:contentDescription="@string/prev_button"
                 android:layout_marginEnd="16dp" />
 
-            <!-- Кнопка Next -->
             <ImageButton
                 android:id="@+id/next_button"
                 android:layout_width="wrap_content"
