--- a/app/src/main/res/layout/activity_cheat.xml
+++ b/app/src/main/res/layout/activity_cheat.xml
@@ -34,4 +34,16 @@
         android:layout_height="wrap_content"
         android:text="Назад"
         android:layout_marginTop="16dp"/> <!-- Отступ для улучшения внешнего вида -->
+
+    <TextView
+        android:id="@+id/api_level_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:fontFamily="sans-serif-medium"
+        android:textColor="@android:color/black"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="API Level" />
+
 </LinearLayout>
