--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,8 +35,23 @@
             android:layout_height="wrap_content"
             android:text="@string/false_button"
             android:layout_margin="4dp" />
-
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/hint_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Осталось подсказок: 3"
+        android:visibility="visible"/>
+
+    <TextView
+        android:id="@+id/answer_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:layout_marginTop="16dp"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/cheat_button"
@@ -69,7 +84,5 @@
             android:src="@drawable/arrow_right"
             android:contentDescription="@string/next_button"
             android:layout_margin="16dp" />
-
     </LinearLayout>
-
 </LinearLayout>
